--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,7 +2,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 120px;
+  height: 150px;
   width: 100%;
   background-color: #1da1f2;
   position: sticky;
@@ -21,5 +21,20 @@ nav span {
 
 .create-tweet {
   padding-right: 1.5em;
+  padding-top: 50px;
   cursor: pointer;
+}
+
+.create-tweet:hover .arrow-down {
+  visibility: visible;
+}
+
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #f00;
+  margin: 5px auto;
+  visibility: hidden;
 }
