--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -16,6 +16,7 @@ textarea:focus {
 
 .new-tweet {
   display: flex;
+  /* visibility: hidden; */
   justify-content: center;
   align-items: center;
 }
@@ -29,6 +30,7 @@ textarea:focus {
 .new-tweet__div__counter {
   text-align: right;
   margin: auto 0px;
+  font-weight: bold;
 }
 
 .new-tweet__div__btn {
@@ -38,15 +40,14 @@ textarea:focus {
   text-transform: uppercase;
   outline: none;
   overflow: hidden;
-  position: relative;
   color: black;
   background-color: #1da1f2;
   border-radius: 10px;
   padding: 10px 40px;
   margin: 10px 10px 10px 0px;
-  box-shadow: 2px 5px #9b9b9b;
+  box-shadow: 1px 3px #adadad;
 }
-
 .new-tweet__div__btn:hover {
+  box-shadow: 2px 5px #9b9b9b;
   background-color: #1c83c4;
 }
