--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -10,9 +10,10 @@ article.tweet {
 }
 
 article.tweet header {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 60px;
+  height: auto;
 }
 
 .tweet__user {
@@ -42,6 +43,7 @@ article.tweet header {
 article.tweet .tweet__body {
   height: auto;
   text-align: center;
+  word-wrap: break-word;
 }
 
 article.tweet footer {
